--- a/sources/sections/03-norm-refs.adoc
+++ b/sources/sections/03-norm-refs.adoc
@@ -16,7 +16,7 @@ supplied definitions used in this document.
 
 * [[[iso19105:2022,ISO 19105:2022]]], Geographic information — Conformance and testing
 
-* [[[ogc-modspec,OGC 08-131r3]]], https://portal.ogc.org/files/?artifact_id=34762[The Specification Model — A Standard for Modular specifications]
+* [[[ogc-modspec,OGC 08-131r3]]], https://portal.ogc.org/files/?artifact_id=34762[The Specification Model — A Standard for Modular specifications Version 1]
 
 
 
