--- a/sources/sections/00-preface.adoc
+++ b/sources/sections/00-preface.adoc
@@ -38,14 +38,14 @@ The following OGC Members participated in editing this document:
 [.preface]
 == Document Contributors
 
-The following OGC Members contributed and particpated in developing ModSpec Version 1.1 
+The following OGC Members contributed and particpated in developing the ModSpec Version 1.1 
 
 [%unnumbered]
 |===
 ^h| Person ^h| Organization Represented
-| Carl Reed | Carl Reed
-| Chuck Heazel | Charles Heazel
-| Jeff Yutzler | ImageMatters
+| Carl Reed | Carl Reed & Associates
+| Chuck Heazel | Heazeltech
+| Jeff Yutzler | ImageMatters/Tema
 |===
 
 [.preface]
@@ -54,13 +54,12 @@ The following OGC Members contributed and particpated in developing ModSpec Vers
 The following OGC Members support the ModSpec Version 1.1 submission
 
 [%unnumbered]
-|===
-^h| Organization
-| Carl Reed & Associates |
-| Heazeltech |
-| ImageMatters/Tema
-| UK Met Office |
-|===
+
+- Carl Reed & Associates
+- Heazeltech
+- ImageMatters/Tema
+- UK Met Office
+
 
 [.preface]
 == Revision history
